<resources>
    <string name="app_name">FoodLoop</string>

    <!-- =================================================================  -->
    <!-- GENERAL -->
    <string name="btnHomePage">Home</string>
    <string name="txtLogoDesc">FoodLoop</string>

    <!-- =================================================================  -->
    <!-- MICHAEL -->
    <!-- =================================================================  -->
    <!-- HEADERS -->
    <string name="txtTitleCreate">CREATE AN ACCOUNT</string>
    <string name="txtTitleEdit">EDIT YOUR PROFILE</string>
    <string name="txtTestAccount">Testing Account Pages</string>
    <string name="txtTestHistory">Testing History Pages</string>
    <string name="txtRequestHistory">Request History</string>
    <string name="txtDonateHistory">Donate History</string>

    <!-- INPUT HINTS -->
    <string name="hintAccountID">Enter Account ID</string>
    <string name="hintName">Name</string>
    <string name="hintItem">Enter Item</string>
    <string name="hintStatus">Enter Status</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintBirthDate">BirthDate: DD-MM-YYYY</string>
    <string name="hintAddress">Address</string>
    <string name="hintStreet">Street Address</string>
    <string name="hintCity">City</string>
    <string name="hintProvince">Province</string>
    <string name="hintCountry">Country</string>
    <string name="hintPostalCode">Postal Code</string>
    <string name="hintPhone">Phone Number</string>
    <string name="hintEmail">E-mail Address</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfirmPass">Confirm Password</string>
    <string name="hintOldPass">Current Password</string>
    <string name="txtHintNewPass">New Password</string>
    <string name="txtHintConfirmNewPass">Confirm New Password</string>
    <string name="txtHintRequestStatus">Enter Request Status</string>
    <string name="txtSearchHint">Search</string>

    <!-- BUTTONS -->
    <string name="btnShowAccounts">Show All Accounts</string>
    <string name="btnCreateHistory">Create Donation History Record</string>
    <string name="btnGoToAccountCreate">Go to Create Account</string>
    <string name="btnGoToAccountProfile">Go to Account Profile</string>
    <string name="btnGoToAccountEdit">Go to Edit Profile</string>
    <string name="btnGoToManageDonations">Go to Manage Donations</string>
    <string name="btnGoToRequestHist">Go to Edit Profile</string>
    <string name="btnHistory">Go to Donation History Page</string>
    <string name="btnTestDatabase">Go to Database Testing Page</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="btnEditAccount">Apply Edits</string>
    <string name="btnGoToTest">Go to Testing Page</string>
    <string name="btnSearchDesc">Search Description</string>
    <string name="btnCheckHistory">Check Number of History Records</string>
    <string name="btnRequest">Go to Request History Page</string>

    <!-- SPINNER ARRAYS -->
    <string-array name="CountryArray">
        <item>Select a Country</item>
        <item>Canada</item>
        <item>USA</item>
    </string-array>
    <string-array name="AccountTypeArray">
        <item>Select an Account Type</item>
        <item>Donor</item>
        <item>Requestor</item>
        <item>Donor and Requestor</item>
    </string-array>

    <!-- CONTENT DESCRIPTIONS -->
    <string name="imgDesc">An Image</string>

    <!-- =================================================================  -->
    <!-- NILESH -->
    <!-- =================================================================  -->
    <string name="regTitle">Loop It. Like It. Save It.</string>
    <string name="regJoin">Join Now!</string>
    <string name="btnLogin">LOG IN</string>
    <string name="btnSignUp">SIGN UP</string>
    <string name="txtEmail">Enter Your Email</string>
    <string name="txtPassword">Enter Your Password\n</string>
    <string name="txtLogin">Log in</string>
    <string name="logoutMessage">"You Have successfully logged out.\nThank You for using FoodLoop! "</string>
    <string name="btnRelogin">LOG IN AGAIN</string>
    <string name="RememberMe">Remember Me</string>

    <!-- =================================================================  -->
    <!-- GIA -->
    <!-- =================================================================  -->
    <!-- Create Account Labels -->
    <string name="txtLabelName">Account Name</string>
    <string name="txtLabelAdd">Address </string>
    <string name="txtLabelCNum">Contact Number</string>
    <string name="txtLabelEmail">E-Mail </string>
    <string name="txtLabelPW1">Password</string>
    <string name="txtLabelPW2">Confirm Password</string>

    <!-- Profile Page -->
    <string name="txtTitleProfile">Profile Page</string>
    <string name="txtProfileEdit">Edit Profile</string>

    <!-- Log In Options Split -->
    <string name="txtIdentity">Who are you today?</string>
    <string name="btnImADonor">I am a donor!</string>
    <string name="btnImARequestor">I am a requestor!</string>

    <!-- Item_Universal XML -->
    <string name="txtStatus">Status</string>
    <string name="txtResponse">Response</string>
    <string name="txtItem">Item</string>
    <string name="txtRequestor">Requestor</string>
    <string name="txtDonor">Donor</string>
    <string name="txtDateReq">Date Requested</string>
    <string name="txtLocation">Location</string>">

    <!-- Active Donations Tracking -->
    <string name="txtMADTitleName">Manage Active Donations</string>
    <string name="btnMADAllDon">All Donations</string>
    <string name="btnMADReqDon">Requested Donations</string>
    <string name="btnNotif">Send Notification</string>

    <!-- Active Requests Tracking -->
    <string name="txtRTTitleName">Request Tracker</string>

    <!-- Add Request Item -->
    <string name="txtReqItemTitle">Food Request and Search</string>

    <!-- View Request Item -->
    <string name="txtViewReqTitle">View Request Information</string>
    <string name="txtVwRqItem">Item Requested</string>
    <string name="txtVwRqDonor">Donor</string>
    <string name="txtVwRqStatus">Status</string>
    <string name="txtVwRqCat">Category</string>
    <string name="txtVwRqQty">Quantity</string>
    <string name="txtVwRqLoc">Location</string>
    <string name="txtVwRqPrc">Price</string>
    <string name="txtVwRqDeliveryMethod">Has your item been delivered or picked up?</string>
    <string name="btnReceived">Received</string>">

    <!-- =================================================================  -->
    <!-- BELLE   -->
    <!-- =================================================================  -->
    <!--Donation Home Page    -->
    <string name="txtWelcomeTitle">Welcome to FoodLoop!</string>
    <string name="btnDonateFood">DONATE FOOD</string>
    <string name="btnDDetails">Donation Details</string>
    <string name="btnEditDetails">Edit Donation Info</string>
    <string name="btnDonationStatus">Donation Status</string>
    <string name="btnDonHistory">Donation History</string>
    <string name="btnViewProfile">View Profile</string>
    <string name="btnLogOut1">Log Out</string>
    <string name="imgFoodLoopLogo">FoodLoop logo</string>
    <string name="imgHeader">image header</string>
    <string name="imgLogo">food loops logo</string>

    <!-- Request Home Page -->
    <string name="btnReqFd">REQUEST FOOD</string>
    <string name="btnReqDetails">Request Details</string>
    <string name="btnViewReqInfo">View Request Info</string>
    <string name="btnReqStatus">Request Status</string>
    <string name="btnReqHist">Request History</string>
    <string name="btnReqVP">View Profile</string>
    <string name="btnReqLogOut">Log Out</string>

    <!-- Donor Page   -->
    <string name="txtActiveDonations">Active Donations</string>
    <string name="txtDPTitle">Donor\'s Page</string>
    <string name="btnActive1">Active</string>
    <string name="btnAddItem"> +   Add Item Donation</string>
    <string name="btnCompleted1">Completed</string>
    <string name="btnHomeDonorPage">Home</string>

    <!-- Donation Add Page    -->
    <string name="txtAddItem1">Add Item</string>
    <string name="edtItemNameHint">e.g. Rice, gluten free bread, canned tuna</string>
    <string name="edtQuantityHint">Enter a number</string>
    <string name="edtCategory">Category</string>
    <string name="txtExpiryDate1">Expiry Date</string>
    <string name="txtQuantity1">Quantity</string>
    <string name="txtItemName2">Food Item Name</string>
    <string name="edtExpiryDateInfo">Enter dd/mm/yyyy</string>
    <string name="rdbFree1">Free</string>
    <string name="rdbDiscount1">Discount</string>
    <string name="txtOfferType1">Offer Type</string>
    <string name="edtPrice1">$ Set Price</string>
    <string name="btnCancel1">Cancel</string>
    <string name="btnSave1">Save</string>
    <string-array name="Category_Options">
        <item>Select a Category</item>
        <item>Bakery</item>
        <item>Produce</item>
        <item>Meat</item>
        <item>Dairy</item>
        <item>Beverages</item>
        <item>Frozen Goods</item>
        <item>Canned Goods</item>
        <item>Dry Goods</item>
    </string-array>

    <!--Edit Donation Page -->
    <string name="txtEditItem">Edit Item</string>
    <string name="btnSaveEdit">Save Edit</string>
    <string name="btnCancelEdit">Cancel</string>
    <string name="btnBackToProfile">Back to Profile</string>
    <string name="btnDeleteItem">Delete</string>

    <!-- =================================================================  -->

    <!--  Requestor Collection Options -->
    <string name="txtAvailTime1">Time Slot</string>
    <string name="txtCollection">Collection Type</string>
    <string-array name="Collection_Options">
        <item>Pick Up</item>
        <item>Delivery</item>
        <item>Both</item>
    </string-array>
    <string-array name="Avail_Pickup">
        <item>Select a Time</item>
        <item>Morning (9AM-11AM)</item>
        <item>Afternoon (1PM-4PM)</item>
        <item>Evening (5PM-7PM)</item>
    </string-array>
    <string name="txtDate">Date Preferred</string>

    <string name="txtLabelCNum2">Contact Number</string>
    <string name="txtLabelName2">Name</string>
    <string name="btnEdit">Edit</string>
    <string name="txtIWantTo">I want to:</string>
    <string name="txtPersonalDetails">Personal Details</string>
    <string name="txtAddress">Address</string>
    <string name="txtSecurity">Security</string>
    <string name="btnBack">Back</string>

    <!-- Added strings   -->
    <string name="btnSignUp2">Sign Up</string>
    <string name="txtInputReqItem">Search name or category...</string>
    <string name="btnHome">Home</string>
    <string name="txtAccountType2">Account Type</string>
    <string name="txtFoodReqTitle">Food Request and Search</string>
    <string name="txtExpiryDate">Expiry: 2026-05-01</string>
    <string name="txtDonorLoc">Donor Location: Burnaby, BC</string>
    <string name="txtOfferType">FREE DONATION</string>

    <!--    //Request Item Page by Nilesh-->
    <string-array name="method_options">
        <item>Pickup</item>
        <item>Delivery</item>
    </string-array>
</resources>