<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff6d7"
    android:fillViewport="true"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imgLogo"
            app:srcCompat="@drawable/foodloop_logo" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/txtTitleCreate"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginTop="20dp"
            android:text="@string/txtIWantTo"
            android:textColor="#004aad"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/inputAccountType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:entries="@array/AccountTypeArray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtPersonalDetails"
            android:textColor="#004aad"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hintName"
            android:inputType="textPersonName"
            android:paddingStart="16dp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hintPhone"
            android:inputType="phone"
            android:paddingStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtAddress"
            android:textColor="#004aad"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputStreet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hintStreet"
            android:paddingStart="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:hint="@string/hintCity"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/inputProvince"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:hint="@string/hintProvince"
                android:paddingStart="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputPostal"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:hint="@string/hintPostalCode"
                android:paddingStart="16dp" />

            <Spinner
                android:id="@+id/inputCountry"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:entries="@array/CountryArray" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtSecurity"
            android:textColor="#004aad"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:paddingStart="16dp" />

        <EditText
            android:id="@+id/inputConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hintConfirmPass"
            android:inputType="textPassword"
            android:paddingStart="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCreateToHome"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#ff193b"
                android:onClick="toLogInPage"
                android:text="@string/btnBack"
                app:cornerRadius="25dp" />

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1.5"
                android:backgroundTint="#004aad"
                android:onClick="createAccount"
                android:text="@string/btnSignUp2"
                app:cornerRadius="25dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>