<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff6d7"
    tools:context=".Account_Edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imgFoodLoopLogo"
            app:srcCompat="@drawable/foodloop_logo" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtTitleEdit"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginTop="20dp"
            android:text="@string/txtAccountType2"
            android:textColor="#004aad"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/inputAccountType2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:entries="@array/AccountTypeArray" />

        <TextView
            android:id="@+id/txtName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtLabelName"
            android:textColor="#004aad"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintName"
            android:importantForAutofill="no"
            android:inputType="text|textPersonName"
            android:padding="16dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintEmail"
            android:importantForAutofill="no"
            android:inputType="text|textEmailAddress"
            android:padding="16dp"
            android:textColorHint="#757575"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintPhone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="16dp"
            android:textColorHint="#757575"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtLabelAdd"
            android:textColor="#004aad"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputStreet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintStreet"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#757575" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCity"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintCity"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/inputProvince2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintProvince"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:textColorHint="#757575" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputPostal"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintPostalCode"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:textColorHint="#757575" />

            <Spinner
                android:id="@+id/inputCountry"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:entries="@array/CountryArray"
                android:gravity="center"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtSecurityEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtSecurity"
            android:textColor="#004aad"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputNewPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txtHintNewPass"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:paddingStart="16dp"
            android:textColorHint="#757575"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/inputConfirmNewPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txtHintConfirmNewPass"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:paddingStart="16dp"
            android:textColorHint="#757575"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#ff193b"
                android:onClick="updateAccount"
                android:text="@string/btnEditAccount"
                android:textSize="20sp"
                app:cornerRadius="25dp" />

            <Button
                android:id="@+id/btnEditToTest"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1.5"
                android:backgroundTint="#004aad"
                android:onClick="toProfilePage"
                android:text="@string/btnBackToProfile"
                android:textSize="20sp"
                app:cornerRadius="25dp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>